# beepex

./: .gitignore  .pre-commit-config.yaml  README.md  beepex.py  beepex.spec  build.sh  main.py  pyproject.toml
.github/workflows/: release.yml
css/: extra.css
example/: index.html
example/chat/discord/: !4lmQdvHP3FyYq5H76cJM_beeper.local.html
example/chat/discordgo/: !4lmQdvHP3FyYq5H76cJM_beeper.local.html
example/chats/discord/: Four Yorkshiremen (chat_1ab466b6_5edf_4c26_abc5_169521057e30).html  chat_1ab466b6_5edf_4c26_abc5_169521057e30.html
example/gallery/discord/: !4lmQdvHP3FyYq5H76cJM_beeper.local.html
example/gallery/discordgo/: !4lmQdvHP3FyYq5H76cJM_beeper.local.html
example/media/beepex/: chat.css  extra.css  gallery.css  gallery.js
resources/: chat.css  gallery.js  water.css
test/: chat.json  mock.py  validatehtml.py
