[project]
name = "beepex"
version = "0.1.0"
description = "Export chat history from the Beeper desktop client"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleach>=6.2.0",
    "requests>=2.32.5",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
]
