[project]
name = "beepex"
version = "0.1.0"
description = "Export chat history from the Beeper desktop client"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleach>=6.2.0",
    "packaging>=25.0",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
    "types-bleach>=6.2.0.20250809",
    "types-requests>=2.32.4.20250913",
    "types-tqdm>=4.67.0.20250809",
]
